--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>BU Serves - Bennett University Services</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navAbar">
         <div class="navbar-container">
             <h1 class="navbar-title">BU Serves</h1>
             <ul class="navbar-menu">
@@ -30,6 +31,7 @@
     <main class="main-content">
         <div class="services-grid">
             <!-- BU Food Service -->
+            <!-- In your index.html -->
             <div class="service-card" onclick="navigateTo('bu-food.html')">
                 <i class="fas fa-utensils service-icon orange"></i>
                 <h2 class="service-title">BU Food</h2>
