--- a/bu-food.html
+++ b/bu-food.html
@@ -130,17 +130,22 @@
         <h2>Customer Reviews</h2>
         <div class="reviews-grid">
             <div class="review-card">
-                <p>Incredible food and amazing service! The truffle pasta was to die for. Highly recommend!</p>
-                <strong>- Emily Johnson</strong>
+                <p>The butter chicken was absolutely divine, but the naan was slightly overcooked. Still worth a visit!</p>
+                <strong>- Aarav Mehta</strong>
             </div>
             <div class="review-card">
-                <p>A culinary journey that exceeded all my expectations. Every dish was a masterpiece.</p>
-                <strong>- Michael Wong</strong>
+                <p>Outstanding dosas and the chutneys were bursting with flavor. Service could be a bit quicker, though.</p>
+                <strong>- Priya Sharma</strong>
             </div>
             <div class="review-card">
-                <p>The most innovative and delicious menu I've tried in years. Can't wait to come back!</p>
-                <strong>- Rachel Martinez</strong>
+                <p>The ambiance was nice, but the biryani was too spicy for my taste. Would recommend for spice lovers!</p>
+                <strong>- Kabir Patel</strong>
             </div>
+            <div class="review-card">
+                <p>An amazing spread of authentic Indian dishes! The paneer tikka was the highlight of my meal.</p>
+                <strong>- Ananya Gupta</strong>
+            </div>
+            
         </div>
     </section>
 
