almost final project

--- a/kathi.html
+++ b/kathi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food 24/7</title>
-    <link rel="stylesheet" href="bufood.css">
+    <link rel="stylesheet" href="kathi.css">
 </head>
 <body>
     <header>
@@ -46,28 +46,28 @@
         <h2>Our Menu</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <img src="images/burger.jpg" alt="Gourmet Burger">
+                <img src="assets/burger.jpg" alt="Gourmet Burger">
                 <div class="item-details">
                     <h3> Burger</h3>
                     <p>60rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/pasta.jpg" alt="Truffle Pasta">
+                <img src="assets/pasta.jpg" alt="Truffle Pasta">
                 <div class="item-details">
                     <h3>white sauce Pasta</h3>
                     <p>120rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/cholebhature.jpg" alt="Seafood Risotto">
+                <img src="assets/cholebhature.jpg" alt="Seafood Risotto">
                 <div class="item-details">
                     <h3>chole bhature</h3>
                     <p>80rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/parathta.jpeg" alt="Vegan Bowl">
+                <img src="assets/parathta.jpeg" alt="Vegan Bowl">
                 <div class="item-details">
                     <h3>Aloo paratha</h3>
                     <p>50rs</p>
@@ -80,7 +80,7 @@
         <h2>Our Chefs</h2>
         <div class="chefs-grid">
             <div class="chef-card">
-                <img src="images/gordan.jpeg" alt="Chef Maria">
+                <img src="assets/gordan.jpeg" alt="Chef Maria">
                 <div class="chef-details">
                     <h3>gordon ramsay</h3>
                     <p>Our kitchen's secret weapon.<br>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="chef-card">
-                <img src="images/lalit.jpeg" alt="Chef David">
+                <img src="assets/lalit.jpeg" alt="Chef David">
                 <div class="chef-details">
                     <h3>lalit chawdhary</h3>
                     <p>Behind every delectable pastry is the masterful hand of Chef Lalit Chawdhary.<br>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="chef-card">
-                <img src="images/ranveer.jpeg" alt="Chef Sarah">
+                <img src="assets/ranveer.jpeg"Chef Sarah">
                 <div class="chef-details">
                     <h3>ranveer brar</h3>
                     <p>the culinary magician, conjuring flavors that transport your taste buds to a gastronomic wonderland</p>
