fixed images in salon

--- a/bu-food.html
+++ b/bu-food.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Food Stalls</title>
     <link rel="stylesheet" href="hehe.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Luckiest+Guy&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script>
         function navigateTo(url) {
             window.location.href = url;
@@ -13,13 +15,13 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="header-content">
             <h1>Welcome to Our College Food Stalls</h1>
         </div>
     </header>
-    
+
     <section class="stalls">
-        <div class="stall">
+        <div class="stall" onclick="navigateTo('snap-eats.html')">
             <img src="assets/WhatsApp Image 2024-11-27 at 01.05.52 (1).jpeg" alt="Snap Eats">
             <h2>Snap Eats</h2>
             <p>Fast and flavorful snacks on the go!</p>
@@ -31,19 +33,19 @@
             <p>Irresistible rolls and kebabs, wrapped with love.</p>
         </div>
 
-        <div class="stall">
+        <div class="stall" onclick="navigateTo('chai.html')">
             <img src="assets/WhatsApp Image 2024-11-27 at 01.05.53 (1).jpeg" alt="Chai OK Please">
             <h2>Chai OK Please</h2>
             <p>Aromatic chai and snacks to refresh your day.</p>
         </div>
 
-        <div class="stall">
+        <div class="stall" onclick="navigateTo('southern-stories.html')">
             <img src="assets/WhatsApp Image 2024-11-27 at 01.05.53 (2).jpeg" alt="Southern Stories">
             <h2>Southern Stories</h2>
             <p>Authentic South Indian flavors, served fresh.</p>
         </div>
 
-        <div class="stall">
+        <div class="stall" onclick="navigateTo('nescafe.html')">
             <img src="assets/WhatsApp Image 2024-11-27 at 01.05.52.jpeg" alt="Nescafe">
             <h2>Nescafe</h2>
             <p>Comforting coffee and beverages to fuel your energy.</p>
