--- a/bu salon/first.html
+++ b/bu salon/first.html
@@ -50,21 +50,21 @@
             <!-- Haircut Column -->
             <div class="service-box" id="haircut">
                 <h3>Haircut</h3>
-                <img src="Screenshot 2024-11-26 at 7.08.49 PM.png" alt="Haircut Image" class="service-img">
+                <img src="hair.png" alt="Haircut Image" class="service-img">
                 <p>Professional haircuts tailored to your style.</p>
             </div>
 
             
             <div class="service-box" id="beard">
                 <h3>Beard</h3>
-                <img src="Screenshot 2024-11-26 at 7.10.33 PM.png" alt="Beard Image" class="service-img">
+                <img src="beard.png" alt="Beard Image" class="service-img">
                 <p>Expert beard grooming and shaping services.</p>
             </div>
 
             
             <div class="service-box" id="both">
                 <h3>Haircut & Beard</h3>
-                <img src="Screenshot 2024-11-26 at 7.14.31 PM.png" alt="Haircut and Beard Image" class="service-img">
+                <img src="tools.png" alt="Haircut and Beard Image" class="service-img">
                 <p>Complete grooming package for your hair and beard.</p>
             </div>
         </div>
