--- a/kathi.html
+++ b/kathi.html
@@ -24,7 +24,8 @@
 
     <section id="home" class="hero">
         <h1>food 24/7</h1>
-        <p>Experience culinary excellence with our carefully crafted dishes, prepared with passion and the freshest ingredients.</p>
+        <p>Experience culinary excellence with our carefully crafted dishes,<br>
+             prepared with passion and the freshest ingredients.</p>
         <a href="#menu" class="btn">Explore Menu</a>
     </section>
 
@@ -46,28 +47,28 @@
         <h2>Our Menu</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <img src="assets/burger.jpg" alt="Gourmet Burger">
+                <img src="assets/burger.jpg" alt=" Burger">
                 <div class="item-details">
                     <h3> Burger</h3>
                     <p>60rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="assets/pasta.jpg" alt="Truffle Pasta">
+                <img src="assets/pasta.jpg" alt="Pasta">
                 <div class="item-details">
                     <h3>white sauce Pasta</h3>
                     <p>120rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="assets/cholebhature.jpg" alt="Seafood Risotto">
+                <img src="assets/cholebhature.jpg" alt="chole bhature">
                 <div class="item-details">
                     <h3>chole bhature</h3>
                     <p>80rs</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="assets/parathta.jpeg" alt="Vegan Bowl">
+                <img src="assets/parathta.jpeg" alt="paratha">
                 <div class="item-details">
                     <h3>Aloo paratha</h3>
                     <p>50rs</p>
@@ -80,7 +81,7 @@
         <h2>Our Chefs</h2>
         <div class="chefs-grid">
             <div class="chef-card">
-                <img src="assets/gordan.jpeg" alt="Chef Maria">
+                <img src="assets/gordan.jpeg" alt="gordan ramsey">
                 <div class="chef-details">
                     <h3>gordon ramsay</h3>
                     <p>Our kitchen's secret weapon.<br>
@@ -89,7 +90,7 @@
                 </div>
             </div>
             <div class="chef-card">
-                <img src="assets/lalit.jpeg" alt="Chef David">
+                <img src="assets/lalit.jpeg" alt="lalit chawdahry">
                 <div class="chef-details">
                     <h3>lalit chawdhary</h3>
                     <p>Behind every delectable pastry is the masterful hand of Chef Lalit Chawdhary.<br>
@@ -97,7 +98,7 @@
                 </div>
             </div>
             <div class="chef-card">
-                <img src="assets/ranveer.jpeg"Chef Sarah">
+                <img src="assets/ranveer.jpeg" alt = "ranveer brar">
                 <div class="chef-details">
                     <h3>ranveer brar</h3>
                     <p>the culinary magician, conjuring flavors that transport your taste buds to a gastronomic wonderland</p>
